Wrap p.note inside div.note

--- a/files/en-us/web/svg/attribute/clip-path/index.html
+++ b/files/en-us/web/svg/attribute/clip-path/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.clip-path
 
 <p>The <strong><code>clip-path</code></strong> presentation attribute defines or associates a clipping path with the element it is related to.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>clip-path</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>clip-path</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
@@ -92,7 +92,7 @@ browser-compat: svg.attributes.presentation.clip-path
  <dd>An extra information to tell how a {{cssxref('basic-shape')}} is applied to an element: <code>fill-box</code> indicates to use the object bounding box; <code>stroke-box</code> indicates to use the object bounding box extended with the stroke; <code>view-box</code> indicates to use the nearest SVG viewport as the reference box.</dd>
 </dl>
 
-<p class="note"><strong>Note:</strong> For more details on the clip-path syntax, see the CSS property {{cssxref('clip-path')}} reference page.</p>
+<div class="note"><p><strong>Note:</strong> For more details on the clip-path syntax, see the CSS property {{cssxref('clip-path')}} reference page.</p></div>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
 
