--- a/files/en-us/web/svg/attribute/color-interpolation-filters/index.html
+++ b/files/en-us/web/svg/attribute/color-interpolation-filters/index.html
@@ -19,7 +19,7 @@ browser-compat: svg.attributes.presentation.color-interpolation-filters
 <p>It has no affect on filter functions, which operate in the {{Glossary("sRGB")}} color space.</p>
 </div>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>color-interpolation-filters</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>color-interpolation-filters</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
