--- a/files/en-us/web/svg/attribute/color-rendering/index.html
+++ b/files/en-us/web/svg/attribute/color-rendering/index.html
@@ -12,7 +12,7 @@ browser-compat: svg.attributes.presentation.color-rendering
 
 <p><code>color-rendering</code> takes precedence over {{SVGAttr("color-interpolation-filters")}}. For example, assume <code>color-rendering: optimizeSpeed</code> and <code>color-interpolation-filters: linearRGB</code>. In this case, the SVG user agent should perform color operations in a way that optimizes performance, which might mean sacrificing the color interpolation precision as specified by through the <code>linearRGB</code> value for <code>color-interpolation-filters</code>.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>color-rendering</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>color-rendering</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
