--- a/files/en-us/web/svg/attribute/cy/index.html
+++ b/files/en-us/web/svg/attribute/cy/index.html
@@ -55,7 +55,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>cy</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for circles.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>cy</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for circles.</p></div>
 
 <h2 id="ellipse">ellipse</h2>
 
@@ -78,7 +78,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>cy</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for ellipses.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>cy</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for ellipses.</p></div>
 
 <h2 id="radialGradient">radialGradient</h2>
 
