--- a/files/en-us/web/svg/attribute/display/index.html
+++ b/files/en-us/web/svg/attribute/display/index.html
@@ -26,7 +26,7 @@ browser-compat: svg.attributes.presentation.display
 
 <p>This attribute also affects direct rendering into offscreen canvases, such as occurs with masks or clip paths. Thus, setting <code>display="none"</code> on a child of a {{SVGElement("mask")}} will prevent the given child element from being rendered as part of the mask. Similarly, setting <code>display="none"</code> on a child of a {{SVGElement("clipPath")}} element will prevent the given child element from contributing to the clipping path.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>display</code> can be used as a CSS property. See {{cssxref("display", "CSS display")}} for further information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>display</code> can be used as a CSS property. See {{cssxref("display", "CSS display")}} for further information.</p></div>
 
 <p>You can use this attribute with any SVG element.</p>
 
