--- a/files/en-us/web/svg/attribute/fill/index.html
+++ b/files/en-us/web/svg/attribute/fill/index.html
@@ -84,7 +84,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="animate">animate</h2>
 
@@ -193,7 +193,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="ellipse">ellipse</h2>
 
@@ -216,7 +216,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="path">path</h2>
 
@@ -239,7 +239,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="polygon">polygon</h2>
 
@@ -262,7 +262,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="polyline">polyline</h2>
 
@@ -285,7 +285,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="rect">rect</h2>
 
@@ -308,7 +308,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="set">set</h2>
 
@@ -352,7 +352,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="textPath">textPath</h2>
 
@@ -375,7 +375,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="tref">tref</h2>
 
@@ -400,7 +400,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="tspan">tspan</h2>
 
@@ -423,7 +423,7 @@ browser-compat: svg.attributes.presentation.fill
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>fill</code> can be used as a CSS property.</p></div>
 
 <h2 id="Specifications">Specifications</h2>
 
@@ -464,4 +464,4 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>{{Compat}}</p>
 
-<p class="note"><strong>Note:</strong> For information on using the <code>context-fill</code> (and <code>context-stroke</code>) values from HTML documents, see the documentation for the non-standard {{cssxref("-moz-context-properties")}} property.</p>
+<div class="note"><p><strong>Note:</strong> For information on using the <code>context-fill</code> (and <code>context-stroke</code>) values from HTML documents, see the documentation for the non-standard {{cssxref("-moz-context-properties")}} property.</p></div>
