--- a/files/en-us/web/svg/attribute/filter/index.html
+++ b/files/en-us/web/svg/attribute/filter/index.html
@@ -11,7 +11,7 @@ browser-compat: svg.attributes.presentation.filter
 
 <p>The <code><strong>filter</strong></code> attribute specifies the filter effects defined by the {{SVGElement("filter")}} element that shall be applied to its element.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>filter</code> can be used as a CSS property. See {{cssxref("filter", "CSS filter")}} for further information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>filter</code> can be used as a CSS property. See {{cssxref("filter", "CSS filter")}} for further information.</p></div>
 
 <p>As a presentation attribute, it can be applied to any element but it only has effect on <a href="/en-US/docs/Web/SVG/Element#Container_elements">container elements</a> without the {{SVGElement("defs")}} element, all <a href="/en-US/docs/Web/SVG/Element#Graphics_elements">graphics elements</a> and the {{SVGElement("use")}} element.</p>
 
