--- a/files/en-us/web/svg/attribute/flood-opacity/index.html
+++ b/files/en-us/web/svg/attribute/flood-opacity/index.html
@@ -11,7 +11,7 @@ browser-compat: svg.attributes.presentation.flood-opacity
 
 <p>The <strong><code>flood-opacity</code></strong> attribute indicates the opacity value to use across the current filter primitive subregion.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>flood-opacity</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>flood-opacity</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
