--- a/files/en-us/web/svg/attribute/font-family/index.html
+++ b/files/en-us/web/svg/attribute/font-family/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.font-family
 
 <p>The <strong><code>font-family</code></strong> attribute indicates which font family will be used to render the text, specified as a prioritized list of font family names and/or generic family names.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>font-family</code> can be used as a CSS property. See the {{cssxref("font-family", "CSS font-family")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>font-family</code> can be used as a CSS property. See the {{cssxref("font-family", "CSS font-family")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
