--- a/files/en-us/web/svg/attribute/font-size-adjust/index.html
+++ b/files/en-us/web/svg/attribute/font-size-adjust/index.html
@@ -8,7 +8,7 @@ browser-compat: svg.attributes.presentation.font-size-adjust
 ---
 <p>The <code>font-size-adjust</code> attribute allows authors to specify an aspect value for an element that will preserve the x-height of the first choice font in a substitute font.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>font-size-adjust</code> can be used as a CSS property. See the {{cssxref("font-size-adjust", "CSS font-size-adjust")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>font-size-adjust</code> can be used as a CSS property. See the {{cssxref("font-size-adjust", "CSS font-size-adjust")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
