--- a/files/en-us/web/svg/attribute/font-size/index.html
+++ b/files/en-us/web/svg/attribute/font-size/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.font-size
 
 <p>The <strong><code>font-size</code></strong> attribute refers to the size of the font from {{Glossary("baseline")}} to baseline when multiple lines of text are set solid in a multiline layout environment.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>font-size</code> can be used as a CSS property. See the {{cssxref("font-size", "CSS font-size")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>font-size</code> can be used as a CSS property. See the {{cssxref("font-size", "CSS font-size")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
