--- a/files/en-us/web/svg/attribute/font-style/index.html
+++ b/files/en-us/web/svg/attribute/font-style/index.html
@@ -17,7 +17,7 @@ browser-compat: svg.attributes.presentation.font-style
 
 <p>The <strong><code>font-style</code></strong> attribute specifies whether the text is to be rendered using a normal, italic, or oblique face.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>font-style</code> can be used as a CSS property. See the {{cssxref("font-style", "CSS font-style")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>font-style</code> can be used as a CSS property. See the {{cssxref("font-style", "CSS font-style")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
