--- a/files/en-us/web/svg/attribute/glyph-orientation-horizontal/index.html
+++ b/files/en-us/web/svg/attribute/glyph-orientation-horizontal/index.html
@@ -15,7 +15,7 @@ browser-compat: svg.attributes.presentation.glyph-orientation-horizontal
 
 <p>This attribute is applied only to text written in a horizontal {{SVGAttr("writing-mode")}}.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>glyph-orientation-horizontal</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>glyph-orientation-horizontal</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
