--- a/files/en-us/web/svg/attribute/height/index.html
+++ b/files/en-us/web/svg/attribute/height/index.html
@@ -451,7 +451,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>height</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for <code>&lt;foreignObject&gt;</code>.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>height</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for <code>&lt;foreignObject&gt;</code>.</p></div>
 
 <h2 id="image">image</h2>
 
@@ -474,7 +474,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>height</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for images.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>height</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for images.</p></div>
 
 <h2 id="mask">mask</h2>
 
@@ -539,13 +539,13 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>height</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for rectangles.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>height</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for rectangles.</p></div>
 
 <h2 id="svg">svg</h2>
 
 <p>For {{SVGElement('svg')}}, <code>height</code> defines the vertical length for the rendering area of the SVG viewport.</p>
 
-<p class="note"><strong>Note:</strong> In an HTML document if both the {{SVGAttr('viewBox')}} and <code>height</code> attributes are omitted, <a href="https://svgwg.org/specs/integration/#svg-css-sizing">the svg element will be rendered with a height of <code>150px</code></a></p>
+<div class="note"><p><strong>Note:</strong> In an HTML document if both the {{SVGAttr('viewBox')}} and <code>height</code> attributes are omitted, <a href="https://svgwg.org/specs/integration/#svg-css-sizing">the svg element will be rendered with a height of <code>150px</code></a></p></div>
 
 <table class="standard-table">
  <tbody>
@@ -564,7 +564,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>height</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for <code>&lt;svg&gt;</code>.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>height</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for <code>&lt;svg&gt;</code>.</p></div>
 
 <h2 id="use">use</h2>
 
@@ -591,7 +591,7 @@ tags:
 <p><strong>Note:</strong>  <code>height</code>has no effect on <code>use</code> elements, unless the element referenced has a <a href="/en-US/docs/Web/SVG/Attribute/viewBox">viewbox</a> - i.e. they only have an effect when <code>use</code> refers to a <code>svg</code> or <code>symbol</code> element.</p>
 </div>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>height</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for used elements.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>height</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for used elements.</p></div>
 
 <h2 id="Specifications">Specifications</h2>
 
