--- a/files/en-us/web/svg/attribute/kerning/index.html
+++ b/files/en-us/web/svg/attribute/kerning/index.html
@@ -11,7 +11,7 @@ browser-compat: svg.attributes.presentation.kerning
 
 <p>The <strong><code>kerning</code></strong> attribute indicates whether the spacing between {{Glossary("glyph", "glyphs")}} should be adjusted based on kerning tables that are included in the relevant font (i.e., enable auto-kerning) or instead disable auto-kerning and set the spacing between them to a specific length (typically, zero).</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>kerning</code> can be used as a CSS property. In CSS the property is called {{cssxref("font-kerning")}}, though.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>kerning</code> can be used as a CSS property. In CSS the property is called {{cssxref("font-kerning")}}, though.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
