--- a/files/en-us/web/svg/attribute/mask/index.html
+++ b/files/en-us/web/svg/attribute/mask/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.mask
 
 <p>The <strong><code>mask</code></strong> attribute is a presentation attribute mainly used to bind a given {{ SVGElement("mask") }} element with the element the attribute belongs to.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute {{cssxref('mask')}} can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute {{cssxref('mask')}} can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
