--- a/files/en-us/web/svg/attribute/opacity/index.html
+++ b/files/en-us/web/svg/attribute/opacity/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.opacity
 
 <p>The <strong><code>opacity</code></strong> attribute specifies the transparency of an object or of a group of objects, that is, the degree to which the background behind the element is overlaid.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>opacity</code> can be used as a CSS property. See the {{cssxref("opacity", "CSS opacity")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>opacity</code> can be used as a CSS property. See the {{cssxref("opacity", "CSS opacity")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
