--- a/files/en-us/web/svg/attribute/overflow/index.html
+++ b/files/en-us/web/svg/attribute/overflow/index.html
@@ -21,7 +21,7 @@ browser-compat: svg.attributes.presentation.overflow
 
 <div class="note">Although the initial value for overflow is <code>auto</code>, it is overwritten in the User Agent style sheet for the {{SVGElement("svg")}} element when it is not the root element of a stand-alone document, the {{SVGElement("pattern")}} element, and the {{SVGElement("marker")}} element to be hidden by default.</div>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>overflow</code> can be used as a CSS property. See the {{cssxref("opacity", "CSS opacity")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>overflow</code> can be used as a CSS property. See the {{cssxref("opacity", "CSS opacity")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
