--- a/files/en-us/web/svg/attribute/patterncontentunits/index.html
+++ b/files/en-us/web/svg/attribute/patterncontentunits/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.elements.pattern.patternContentUnits
 
 <p>The <strong><code>patternContentUnits</code></strong> attribute indicates which coordinate system to use for the contents of the {{ SVGElement("pattern") }} element.</p>
 
-<p class="note"><strong>Note:</strong> That this attribute has no effect if attribute {{ SVGAttr("viewBox") }} is specified on the {{ SVGElement("pattern") }} element.</p>
+<div class="note"><p><strong>Note:</strong> That this attribute has no effect if attribute {{ SVGAttr("viewBox") }} is specified on the {{ SVGElement("pattern") }} element.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
