--- a/files/en-us/web/svg/attribute/patterntransform/index.html
+++ b/files/en-us/web/svg/attribute/patterntransform/index.html
@@ -40,7 +40,7 @@ browser-compat: svg.elements.pattern.patternTransform
 
 <p>For {{SVGElement('pattern')}}, <code>patternTransform</code> defines a list of <a href="/en-US/docs/Web/SVG/Attribute/transform#transform_functions">transform definitions</a> that are applied to a pattern tile.</p>
 
-<p class="note"><strong>Note:</strong> As of SVG2, it is also allowed to use the CSS {{ cssxref('transform') }} property. However, the current state of implementation isn't very good. For backward compatibility reason, it is highly suggested to keep using the <code>patternTransform</code> attribute.</p>
+<div class="note"><p><strong>Note:</strong> As of SVG2, it is also allowed to use the CSS {{ cssxref('transform') }} property. However, the current state of implementation isn't very good. For backward compatibility reason, it is highly suggested to keep using the <code>patternTransform</code> attribute.</p></div>
 
 <table class="properties">
  <tbody>
