--- a/files/en-us/web/svg/attribute/ry/index.html
+++ b/files/en-us/web/svg/attribute/ry/index.html
@@ -53,7 +53,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>ry</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for ellipses.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>ry</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for ellipses.</p></div>
 
 <h2 id="rect">rect</h2>
 
@@ -84,7 +84,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>ry</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for rects.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>ry</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for rects.</p></div>
 
 <h2 id="Specifications">Specifications</h2>
 
