--- a/files/en-us/web/svg/attribute/stroke-dasharray/index.html
+++ b/files/en-us/web/svg/attribute/stroke-dasharray/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.stroke-dasharray
 
 <p>The <strong><code>stroke-dasharray</code></strong> attribute is a presentation attribute defining the pattern of dashes and gaps used to paint the outline of the shape;</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>stroke-dasharray</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>stroke-dasharray</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
