--- a/files/en-us/web/svg/attribute/stroke-dashoffset/index.html
+++ b/files/en-us/web/svg/attribute/stroke-dashoffset/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.stroke-dashoffset
 
 <p>The <strong><code>stroke-dashoffset</code></strong> attribute is a presentation attribute defining an offset on the rendering of the associated dash array.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>stroke-dashoffset</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>stroke-dashoffset</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
