--- a/files/en-us/web/svg/attribute/stroke-linecap/index.html
+++ b/files/en-us/web/svg/attribute/stroke-linecap/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.stroke-linecap
 
 <p>The <strong><code>stroke-linecap</code></strong> attribute is a presentation attribute defining the shape to be used at the end of open subpaths when they are stroked.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>stroke-linecap</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>stroke-linecap</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
