--- a/files/en-us/web/svg/attribute/stroke-width/index.html
+++ b/files/en-us/web/svg/attribute/stroke-width/index.html
@@ -65,7 +65,7 @@ browser-compat: svg.attributes.presentation.stroke-width
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> A percentage value is always computed as a percentage of the normalized {{SVGAttr('viewBox')}} diagonal length.</p>
+<div class="note"><p><strong>Note:</strong> A percentage value is always computed as a percentage of the normalized {{SVGAttr('viewBox')}} diagonal length.</p></div>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
 
