--- a/files/en-us/web/svg/attribute/text-anchor/index.html
+++ b/files/en-us/web/svg/attribute/text-anchor/index.html
@@ -14,7 +14,7 @@ browser-compat: svg.attributes.presentation.text-anchor
 
 <p>The <code>text-anchor</code> attribute is applied to each individual text chunk within a given {{SVGElement("text")}} element. Each text chunk has an initial current text position, which represents the point in the user coordinate system resulting from (depending on context) application of the {{SVGAttr("x")}} and {{SVGAttr("y")}} attributes on the <code>&lt;text&gt;</code> element, any <code>x</code> or <code>y</code> attribute values on a {{SVGElement("tspan")}}, {{SVGElement("tref")}} or {{SVGElement("altGlyph")}} element assigned explicitly to the first rendered character in a text chunk, or determination of the initial current text position for a {{SVGElement("textPath")}} element.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>text-anchor</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>text-anchor</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
