--- a/files/en-us/web/svg/attribute/text-decoration/index.html
+++ b/files/en-us/web/svg/attribute/text-decoration/index.html
@@ -14,7 +14,7 @@ browser-compat: svg.attributes.presentation.text-decoration
 
 <p>The paint order of the text decoration, i.e. the fill and stroke, is determined by the value of the {{SVGAttr("paint-order")}} attribute at the point where the text decoration is declared.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>text-decoration</code> can be used as a CSS property. See the {{cssxref("text-decoration", "CSS text-decoration")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>text-decoration</code> can be used as a CSS property. See the {{cssxref("text-decoration", "CSS text-decoration")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
