--- a/files/en-us/web/svg/attribute/text-rendering/index.html
+++ b/files/en-us/web/svg/attribute/text-rendering/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.text-rendering
 
 <p>The <code><strong>text-rendering</strong></code> attribute provides hints to the renderer about what tradeoffs to make when rendering text.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>text-rendering</code> can be used as a CSS property. See the {{cssxref("text-rendering", "CSS text-rendering")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>text-rendering</code> can be used as a CSS property. See the {{cssxref("text-rendering", "CSS text-rendering")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
