--- a/files/en-us/web/svg/attribute/transform/index.html
+++ b/files/en-us/web/svg/attribute/transform/index.html
@@ -9,7 +9,7 @@ tags:
 
 <p>The <strong><code>transform</code></strong> attribute defines a list of transform definitions that are applied to an element and the element's children.</p>
 
-<p class="note"><strong>Note:</strong> As of SVG2, <code>transform</code> is a presentation attribute, meaning it can be used as a CSS property. However, be aware that there are some difference in syntax between the CSS property and the attribute. See the documentation for the CSS property {{cssxref('transform')}} for the specific syntax to use in that case.</p>
+<div class="note"><p><strong>Note:</strong> As of SVG2, <code>transform</code> is a presentation attribute, meaning it can be used as a CSS property. However, be aware that there are some difference in syntax between the CSS property and the attribute. See the documentation for the CSS property {{cssxref('transform')}} for the specific syntax to use in that case.</p></div>
 
 <p>You can use this attribute with any SVG element.</p>
 
