--- a/files/en-us/web/svg/attribute/viewbox/index.html
+++ b/files/en-us/web/svg/attribute/viewbox/index.html
@@ -76,7 +76,7 @@ svg:not(:root) { display: inline-block; }</pre>
 
 <p>The exact effect of this attribute is influenced by the {{ SVGAttr("preserveAspectRatio") }} attribute.</p>
 
-<p class="note"><strong>Note:</strong> Values for <code><var>width</var></code> or <code><var>height</var></code> lower or equal to <code>0</code> disable rendering of the element.</p>
+<div class="note"><p><strong>Note:</strong> Values for <code><var>width</var></code> or <code><var>height</var></code> lower or equal to <code>0</code> disable rendering of the element.</p></div>
 
 <h2 id="marker">marker</h2>
 
