--- a/files/en-us/web/svg/attribute/word-spacing/index.html
+++ b/files/en-us/web/svg/attribute/word-spacing/index.html
@@ -14,7 +14,7 @@ browser-compat: svg.attributes.presentation.word-spacing
 
 <p>If a &lt;length&gt; is provided with one of the unit identifiers (e.g. .25em or 1%), then the browser converts the &lt;length&gt; into a corresponding value in the current user coordinate system.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>word-spacing</code> can be used as a CSS property. See the {{cssxref("word-spacing", "CSS word-spacing")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>word-spacing</code> can be used as a CSS property. See the {{cssxref("word-spacing", "CSS word-spacing")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
