--- a/files/en-us/web/svg/element/fedropshadow/index.html
+++ b/files/en-us/web/svg/element/fedropshadow/index.html
@@ -12,7 +12,7 @@ browser-compat: svg.elements.feDropShadow
 
 <p>The SVG <strong><code>&lt;feDropShadow&gt;</code></strong> filter primitive creates a drop shadow of the input image. It can only be used inside a {{SVGElement('filter')}} element.</p>
 
-<p class="note">The drop shadow color and opacity can be changed by using the {{SVGAttr('flood-color')}} and {{SVGAttr('flood-opacity')}} presentation attributes.</p>
+<div class="note"><p>The drop shadow color and opacity can be changed by using the {{SVGAttr('flood-color')}} and {{SVGAttr('flood-opacity')}} presentation attributes.</p></div>
 
 <div id="Example">
 <div class="hidden">
