--- a/files/en-us/web/svg/element/script/index.html
+++ b/files/en-us/web/svg/element/script/index.html
@@ -9,7 +9,7 @@ browser-compat: svg.elements.script
 ---
 <p>The SVG <code>script</code> element allows to add scripts to an SVG document.</p>
 
-<p class="note">While SVG's <code>script</code> element is equivalent to the HTML {{HTMLElement('script')}} element, it has some discrepancies, like it uses the {{SVGAttr('href')}} attribute instead of {{htmlattrxref('src','script')}} and it doesn't support ECMAScript modules so far (See browser compatibility below for details)</p>
+<div class="note"><p>While SVG's <code>script</code> element is equivalent to the HTML {{HTMLElement('script')}} element, it has some discrepancies, like it uses the {{SVGAttr('href')}} attribute instead of {{htmlattrxref('src','script')}} and it doesn't support ECMAScript modules so far (See browser compatibility below for details)</p></div>
 
 <div id="Example">
 <div class="hidden">
