--- a/files/en-us/web/svg/element/style/index.html
+++ b/files/en-us/web/svg/element/style/index.html
@@ -11,7 +11,7 @@ browser-compat: svg.elements.style
 
 <p>The SVG <strong><code>&lt;style&gt;</code></strong> element allows style sheets to be embedded directly within SVG content.</p>
 
-<p class="note">SVG's <code>style</code> element has the same attributes as the corresponding element in HTML (see HTML's {{HTMLElement("style")}} element).</p>
+<div class="note"><p>SVG's <code>style</code> element has the same attributes as the corresponding element in HTML (see HTML's {{HTMLElement("style")}} element).</p></div>
 
 <div id="Example">
 <div class="hidden">
