--- a/files/en-us/web/svg/attribute/cx/index.html
+++ b/files/en-us/web/svg/attribute/cx/index.html
@@ -55,7 +55,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2 <code>cx</code>, is a <em>Geometry Property</em>, meaning this attribute can also be used as CSS property for circles.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2 <code>cx</code>, is a <em>Geometry Property</em>, meaning this attribute can also be used as CSS property for circles.</p></div>
 
 <h2 id="ellipse">ellipse</h2>
 
@@ -78,7 +78,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2 <code>cx</code>, is a <em>Geometry Property</em>, meaning this attribute can also be used as CSS property for ellipses.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2 <code>cx</code>, is a <em>Geometry Property</em>, meaning this attribute can also be used as CSS property for ellipses.</p></div>
 
 <h2 id="radialGradient">radialGradient</h2>
 
