--- a/files/en-us/web/svg/attribute/direction/index.html
+++ b/files/en-us/web/svg/attribute/direction/index.html
@@ -14,7 +14,7 @@ browser-compat: svg.attributes.presentation.direction
 
 <p>In many cases, the bidirectional Unicode algorithm produces the desired result automatically, so this attribute doesn't need to be specified in those cases. For other cases, such as when using right-to-left languages, it may be sufficient to add the <code>direction</code> attribute to the outermost {{SVGElement("svg")}} element, and allow that direction to inherit to all text elements:</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>direction</code> can be used as a CSS property. See {{cssxref("direction", "CSS direction")}} for further information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>direction</code> can be used as a CSS property. See {{cssxref("direction", "CSS direction")}} for further information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
