--- a/files/en-us/web/svg/attribute/flood-color/index.html
+++ b/files/en-us/web/svg/attribute/flood-color/index.html
@@ -11,7 +11,7 @@ browser-compat: svg.attributes.presentation.flood-color
 
 <p>The <strong><code>flood-color</code></strong> attribute indicates what color to use to flood the current filter primitive subregion.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>flood-color</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>flood-color</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
