--- a/files/en-us/web/svg/attribute/font-variant/index.html
+++ b/files/en-us/web/svg/attribute/font-variant/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.font-variant
 
 <p>The <strong><code>font-variant</code></strong> attribute indicates whether the text is to be rendered using variations of the font's {{Glossary("glyph", "glyphs")}}.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>font-variant</code> can be used as a CSS property. See the {{cssxref("font-variant", "CSS font-variant")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>font-variant</code> can be used as a CSS property. See the {{cssxref("font-variant", "CSS font-variant")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
