--- a/files/en-us/web/svg/attribute/font-weight/index.html
+++ b/files/en-us/web/svg/attribute/font-weight/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.font-weight
 
 <p>The <strong><code>font-weight</code></strong> attribute refers to the boldness or lightness of the glyphs used to render the text, relative to other fonts in the same font family.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>font-weight</code> can be used as a CSS property. See the {{cssxref("font-weight", "CSS font-weight")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>font-weight</code> can be used as a CSS property. See the {{cssxref("font-weight", "CSS font-weight")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
