--- a/files/en-us/web/svg/attribute/marker-mid/index.html
+++ b/files/en-us/web/svg/attribute/marker-mid/index.html
@@ -12,7 +12,7 @@ browser-compat: svg.attributes.presentation.marker-mid
 
 <p>The marker is rendered on every vertex other than the first and last vertices of the <a href="/en-US/docs/Web/SVG/Attribute/d#Path_commands">path data</a>.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>marker-mid</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>marker-mid</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
