--- a/files/en-us/web/svg/attribute/marker-start/index.html
+++ b/files/en-us/web/svg/attribute/marker-start/index.html
@@ -12,7 +12,7 @@ browser-compat: svg.attributes.presentation.marker-start
 
 <p>For all shape elements, except {{SVGElement("polyline")}} and {{SVGElement("path")}}, the last vertex is the same as the first vertex. In this case, if the value of <code>marker-start</code> and {{SVGAttr("marker-end")}} are both not <code><span class="prop-value">none</span></code>, then two markers will be rendered on that final vertex. For <code><span class="element-name">&lt;path&gt;</span></code> elements, for each closed subpath, the last vertex is the same as the first vertex. <code>marker-start</code> is only rendered on the first vertex of the <a href="/en-US/docs/Web/SVG/Attribute/d#Path_commands">path data</a>.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>marker-start</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>marker-start</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
