--- a/files/en-us/web/svg/attribute/orient/index.html
+++ b/files/en-us/web/svg/attribute/orient/index.html
@@ -73,13 +73,13 @@ browser-compat: svg.elements.marker.orient
  <dd>
  <p>If placed by {{SVGAttr("marker-start")}}, the marker is oriented 180° different from the orientation that would be used if <code>auto</code> where specified. For all other markers, <code>auto-start-reverse</code> means the same as <code>auto</code>.</p>
 
- <p class="note"><strong>Note:</strong> This allows a single arrowhead marker to be defined that can be used for both the start and end of a path, i.e. which points outwards from both ends.</p>
+ <div class="note"><p><strong>Note:</strong> This allows a single arrowhead marker to be defined that can be used for both the start and end of a path, i.e. which points outwards from both ends.</p></div>
  </dd>
  <dt><code>&lt;angle&gt;</code></dt>
  <dd>
  <p>This value indicates that the marker is oriented such that the specified angle is that measured between the shape's positive x-axis and the marker's positive x-axis.</p>
 
- <p class="note"><strong>Note:</strong> For example, if a value of <code>45</code> is given, then the marker's positive x-axis would be pointing down and right in the shape's coordinate system.</p>
+ <div class="note"><p><strong>Note:</strong> For example, if a value of <code>45</code> is given, then the marker's positive x-axis would be pointing down and right in the shape's coordinate system.</p></div>
  </dd>
  <dt><code>&lt;number&gt;</code></dt>
  <dd>This value indicates an angle in degrees. The marker is oriented such that the specified angle is that measured between the shape's positive x-axis and the marker's positive x-axis.</dd>
