--- a/files/en-us/web/svg/attribute/pointer-events/index.html
+++ b/files/en-us/web/svg/attribute/pointer-events/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.pointer-events
 
 <p>The <strong><code>pointer-events</code></strong> attribute is a presentation attribute that allows defining whether or when an element may be the target of a mouse event.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute {{cssxref('pointer-events')}} can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute {{cssxref('pointer-events')}} can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
