--- a/files/en-us/web/svg/attribute/points/index.html
+++ b/files/en-us/web/svg/attribute/points/index.html
@@ -42,7 +42,7 @@ tags:
 
 <p>For {{SVGElement('polyline')}}, <code>points</code> defines a list of points, each representing a vertex of the line to be drawn. Each point is define by a X and Y coordinate in the user coordinate system.</p>
 
-<p class="note"><strong>Note:</strong> A polyline is an open shape, meaning the last point is not connected to the first point.</p>
+<div class="note"><p><strong>Note:</strong> A polyline is an open shape, meaning the last point is not connected to the first point.</p></div>
 
 <table class="properties">
  <tbody>
@@ -77,7 +77,7 @@ tags:
 
 <p>For {{SVGElement('polygon')}}, <code>points</code> defines a list of points, each representing a vertex of the shape to be drawn. Each point is define by a X and Y coordinate in the user coordinate system.</p>
 
-<p class="note"><strong>Note:</strong> A polygon is a closed shape, meaning the last point is connected to the first point.</p>
+<div class="note"><p><strong>Note:</strong> A polygon is a closed shape, meaning the last point is connected to the first point.</p></div>
 
 <table class="properties">
  <tbody>
