--- a/files/en-us/web/svg/attribute/r/index.html
+++ b/files/en-us/web/svg/attribute/r/index.html
@@ -66,7 +66,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>r</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for circles.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>r</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for circles.</p></div>
 
 <h2 id="radialGradient">radialGradient</h2>
 
