--- a/files/en-us/web/svg/attribute/shape-rendering/index.html
+++ b/files/en-us/web/svg/attribute/shape-rendering/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.shape-rendering
 
 <p>The <strong><code>shape-rendering</code></strong> attribute provides hints to the renderer about what tradeoffs to make when rendering shapes like paths, circles, or rectangles.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>shape-rendering</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>shape-rendering</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
