--- a/files/en-us/web/svg/attribute/stroke-miterlimit/index.html
+++ b/files/en-us/web/svg/attribute/stroke-miterlimit/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.stroke-miterlimit
 
 <p>The <strong><code>stroke-miterlimit</code></strong> attribute is a presentation attribute defining a limit on the ratio of the miter length to the {{ SVGAttr("stroke-width") }} used to draw a miter join. When the limit is exceeded, the join is converted from a miter to a bevel.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>stroke-miterlimit</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>stroke-miterlimit</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
