--- a/files/en-us/web/svg/attribute/stroke/index.html
+++ b/files/en-us/web/svg/attribute/stroke/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.attributes.presentation.stroke
 
 <p>The <strong><code>stroke</code></strong> attribute is a presentation attribute defining the color (<em>or any SVG paint servers like gradients or patterns</em>) used to paint the outline of the shape;</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute <code>stroke</code> can be used as a CSS property.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute <code>stroke</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
@@ -101,4 +101,4 @@ browser-compat: svg.attributes.presentation.stroke
 
 <p>{{Compat}}</p>
 
-<p class="note"><strong>Note:</strong> For information on using the <code>context-stroke</code> (and <code>context-fill</code>) values from HTML documents, see the documentation for the non-standard {{cssxref("-moz-context-properties")}} property.</p>
+<div class="note"><p><strong>Note:</strong> For information on using the <code>context-stroke</code> (and <code>context-fill</code>) values from HTML documents, see the documentation for the non-standard {{cssxref("-moz-context-properties")}} property.</p></div>
