--- a/files/en-us/web/svg/attribute/style/index.html
+++ b/files/en-us/web/svg/attribute/style/index.html
@@ -47,7 +47,7 @@ browser-compat: svg.attributes.style.style
  <dt><code>&lt;style&gt;</code></dt>
  <dd>The syntax of style data depends on the style sheet language. By default, the style sheet language is <a href="/en-US/docs/Web/CSS">CSS</a>.</dd>
  <dd>
- <p class="note"><strong>Note:</strong> In theory, <a href="/en-US/docs/Web/SVG/Attribute/contentStyleType">the <code>contentStyleType</code> attribute</a> could be used to specify styling languages other than CSS, like <a href="/en-US/docs/Web/XSLT">XSL(T)</a>. However, this was never implemented satisfactorily in browsers, so you should not rely on it.</p>
+ <div class="note"><p><strong>Note:</strong> In theory, <a href="/en-US/docs/Web/SVG/Attribute/contentStyleType">the <code>contentStyleType</code> attribute</a> could be used to specify styling languages other than CSS, like <a href="/en-US/docs/Web/XSLT">XSL(T)</a>. However, this was never implemented satisfactorily in browsers, so you should not rely on it.</p></div>
  </dd>
 </dl>
 
