--- a/files/en-us/web/svg/attribute/visibility/index.html
+++ b/files/en-us/web/svg/attribute/visibility/index.html
@@ -14,7 +14,7 @@ browser-compat: svg.attributes.presentation.visibility
 
 <p>Depending on the value of attribute {{SVGAttr("pointer-events")}}, graphics elements which have their <code>visibility</code> attribute set to <code>hidden</code> still might receive events.</p>
 
-<p class="note"><strong>Note:</strong> As a presentation attribute, <code>visibility</code> can be used as a CSS property. See the {{cssxref("visibility", "CSS visibility")}} property for more information.</p>
+<div class="note"><p><strong>Note:</strong> As a presentation attribute, <code>visibility</code> can be used as a CSS property. See the {{cssxref("visibility", "CSS visibility")}} property for more information.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
