--- a/files/en-us/web/svg/attribute/y/index.html
+++ b/files/en-us/web/svg/attribute/y/index.html
@@ -634,7 +634,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>y</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for <code>&lt;foreignObject&gt;</code>.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>y</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for <code>&lt;foreignObject&gt;</code>.</p></div>
 
 <h2 id="glyphRef">glyphRef</h2>
 
@@ -680,7 +680,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>y</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for images.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>y</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for images.</p></div>
 
 <h2 id="mask">mask</h2>
 
@@ -745,7 +745,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>y</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for rectangles.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>y</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for rectangles.</p></div>
 
 <h2 id="svg">svg</h2>
 
@@ -768,7 +768,7 @@ tags:
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>y</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for <code>&lt;svg&gt;</code>.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>y</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for <code>&lt;svg&gt;</code>.</p></div>
 
 <h2 id="text">text</h2>
 
@@ -932,7 +932,7 @@ line {
  </tbody>
 </table>
 
-<p class="note"><strong>Note:</strong> Starting with SVG2, <code>y</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for used elements.</p>
+<div class="note"><p><strong>Note:</strong> Starting with SVG2, <code>y</code> is a <em>Geometry Property</em> meaning this attribute can also be used as a CSS property for used elements.</p></div>
 
 <h2 id="Specifications">Specifications</h2>
 
