Fix various note formatting issues

--- a/files/en-us/web/svg/attribute/crossorigin/index.html
+++ b/files/en-us/web/svg/attribute/crossorigin/index.html
@@ -68,8 +68,7 @@ browser-compat: api.SVGImageElement.crossOrigin
 https://github.com/mdn/browser-compat-data/blob/178137547bc29a79b712cec221af099329b1f4a0/svg/elements/image.json
 -->
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The above compatibility table is broken and needs fixing.</p>
+  <p><strong>Note:</strong> The above compatibility table is broken and needs fixing.</p>
 </div>
 
 <h2 id="See_also">See also</h2>
