--- a/files/en-us/web/svg/tutorial/basic_shapes/index.html
+++ b/files/en-us/web/svg/tutorial/basic_shapes/index.html
@@ -37,7 +37,7 @@ tags:
   &lt;path d="M20,230 Q40,205 50,230 T90,230" fill="none" stroke="blue" stroke-width="5"/&gt;
 &lt;/svg&gt;</pre>
 
-<div class="note"><strong>Note:</strong> The <code>stroke</code>, <code>stroke-width</code>, and <code>fill</code> attributes are explained later in the tutorial.</div>
+<div class="note"><p><strong>Note:</strong> The <code>stroke</code>, <code>stroke-width</code>, and <code>fill</code> attributes are explained later in the tutorial.</p></div>
 
 <h3 id="Rectangles">Rectangle</h3>
 
