--- a/files/en-us/web/svg/attribute/stroke-linejoin/index.html
+++ b/files/en-us/web/svg/attribute/stroke-linejoin/index.html
@@ -12,7 +12,7 @@ browser-compat: svg.attributes.presentation.stroke-linejoin
 
 <p>The <strong><code>stroke-linejoin</code></strong> attribute is a presentation attribute defining the shape to be used at the corners of paths when they are stroked.</p>
 
-<div class="notecard note"><strong>Note:</strong> As a presentation attribute <code>stroke-linejoin</code> can be used as a CSS property.</div>
+<div class="notecard note"><p><strong>Note:</strong> As a presentation attribute <code>stroke-linejoin</code> can be used as a CSS property.</p></div>
 
 <p>You can use this attribute with the following SVG elements:</p>
 
@@ -111,7 +111,7 @@ browser-compat: svg.attributes.presentation.stroke-linejoin
 
 <h3 id="arcs">arcs</h3>
 
-<div class="notecard note"><strong>Note:</strong> the <code>arcs</code> value as been introduced in SVG2 and it isn't widely supported yet, see <a href="#browser_compatibility">Browser compatibility</a> below for details.</div>
+<div class="notecard note"><p><strong>Note:</strong> The <code>arcs</code> value as been introduced in SVG2 and it isn't widely supported yet, see <a href="#browser_compatibility">Browser compatibility</a> below for details.</p></div>
 
 <p>The <code>arcs</code> value indicates that an arcs corner is to be used to join path segments. The arcs shape is formed by extending the outer edges of the stroke at the join point with arcs that have the same curvature as the outer edges at the join point.</p>
 
@@ -171,7 +171,7 @@ browser-compat: svg.attributes.presentation.stroke-linejoin
 
 <p>The <code>miter</code> value indicates that a sharp corner is to be used to join path segments. The corner is formed by extending the outer edges of the stroke at the tangents of the path segments until they intersect.</p>
 
-<div class="notecard note"><strong>Note:</strong> If the {{SVGAttr('stroke-miterlimit')}} is exceeded, the line join falls back to <code>bevel</code>.</div>
+<div class="notecard note"><p><strong>Note:</strong> If the {{SVGAttr('stroke-miterlimit')}} is exceeded, the line join falls back to <code>bevel</code>.</p></div>
 
 <div class="hidden">
 <pre class="brush: css">html,body,svg { height:100% }</pre>
@@ -209,7 +209,7 @@ browser-compat: svg.attributes.presentation.stroke-linejoin
 
 <h3 id="miter-clip">miter-clip</h3>
 
-<div class="notecard note"><strong>Note:</strong> the <code>miter-clip</code> value as been introduced in SVG2 and it isn't widely supported yet, see <a href="#browser_compatibility">Browser compatibility</a> below for details.</div>
+<div class="notecard note"><p><strong>Note:</strong> the <code>miter-clip</code> value as been introduced in SVG2 and it isn't widely supported yet, see <a href="#browser_compatibility">Browser compatibility</a> below for details.</p></div>
 
 <p>The <code>miter-clip</code> value indicates that a sharp corner is to be used to join path segments. The corner is formed by extending the outer edges of the stroke at the tangents of the path segments until they intersect.</p>
 
