--- a/files/en-us/web/svg/element/radialgradient/index.html
+++ b/files/en-us/web/svg/element/radialgradient/index.html
@@ -12,7 +12,7 @@ browser-compat: svg.elements.radialGradient
 <p>The <strong><code>&lt;radialGradient&gt;</code></strong> element lets authors define radial gradients that can be applied to fill or stroke of graphical elements.</p>
 
 <div class="notecard note">
-<p>Don't be confused with CSS {{cssxref('radial-gradient()')}} as CSS gradients can only apply to HTML elements where SVG gradient can only apply to SVG elements.</p>
+<p><strong>Note:</strong> Don't be confused with CSS {{cssxref('radial-gradient()')}} as CSS gradients can only apply to HTML elements where SVG gradient can only apply to SVG elements.</p>
 </div>
 
 <div id="Example">
