--- a/files/en-us/web/svg/element/switch/index.html
+++ b/files/en-us/web/svg/element/switch/index.html
@@ -15,7 +15,7 @@ browser-compat: svg.elements.switch
 <p>Other direct children will be bypassed and therefore not rendered. If a child element is a container element, like {{SVGElement("g")}}, then its subtree is also processed/rendered or bypassed/not rendered.</p>
 
 <div class="notecard note">
-<p>The <code>display</code> and <code>visibility</code> properties have no effect on <code>&lt;switch&gt;</code> element processing. In particular, setting <code>display:none</code> on a child has no effect on the true/false testing for <code>&lt;switch&gt;</code> processing.</p>
+<p><strong>Note:</strong> The <code>display</code> and <code>visibility</code> properties have no effect on <code>&lt;switch&gt;</code> element processing. In particular, setting <code>display:none</code> on a child has no effect on the true/false testing for <code>&lt;switch&gt;</code> processing.</p>
 </div>
 
 <h2 id="Usage_context">Usage context</h2>
